📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -1870,5 +1870,197 @@
         "published": "Mon, 08 Dec 2025 16:09:44 +0000",
         "source": "AI News",
         "summary": "<p>Instacart has deployed an embedded checkout experience within ChatGPT through the emerging Agentic Commerce Protocol. With the deployment, the company is the first partner to launch an app on ChatGPT that offers a complete shopping cycle \u2013 from query to payment \u2013 without requiring the user to leave the conversation interface. Operationalising agentic commerce The [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/instacart-pilots-agentic-commerce-by-embedding-"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/petcos-security-lapse-affected-customers-ssns-drivers-licenses-and-more/",
+        "title": "Petco\u2019s security lapse affected customers\u2019 SSNs, drivers\u2019 licenses and more",
+        "link": "https://techcrunch.com/2025/12/08/petcos-security-lapse-affected-customers-ssns-drivers-licenses-and-more/",
+        "published": "Mon, 08 Dec 2025 16:53:33 +0000",
+        "source": "TechCrunch",
+        "summary": "Petco said the exposure was due to an error in an application, and that it is notifying victims\u2019 whose data was affected."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/heat-pump-startup-quilt-raises-20m-series-b-to-expand-sales/",
+        "title": "Heat pump startup Quilt raises $20M Series B to expand sales",
+        "link": "https://techcrunch.com/2025/12/08/heat-pump-startup-quilt-raises-20m-series-b-to-expand-sales/",
+        "published": "Mon, 08 Dec 2025 16:52:34 +0000",
+        "source": "TechCrunch",
+        "summary": "Quilt has sold nearly 1,000 units in the U.S. and Canada, and the new funding should help expand sales operations to more states and provinces."
+    },
+    {
+        "id": "https://www.theverge.com/games/840004/skate-story-review-switch-steam-ps5",
+        "title": "Skateboarding is better in hell",
+        "link": "https://www.theverge.com/games/840004/skate-story-review-switch-steam-ps5",
+        "published": "2025-12-08T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Skate Story is two very different things simultaneously. On the one hand, it's a visceral take on skateboarding, providing a tight, fast, ground-level view as you brute-force your way through tricks and combos. But it's also a surrealist trip through the underworld where you control a skateboarding demon who faces off against the devil. Think [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/21420196/best-budget-smartphone-cheap",
+        "title": "The best budget smartphone you can buy",
+        "link": "https://www.theverge.com/21420196/best-budget-smartphone-cheap",
+        "published": "2025-12-08T11:34:43-05:00",
+        "source": "The Verge",
+        "summary": "Some of us take a kind of \u201cI eat to live\u201d rather than an \u201cI live to eat\u201d approach to gadgets. They\u2019re tools that help you get things done, not something you want to invest a lot of time or money in. If that\u2019s you \u2014 and there\u2019s no judgment here from a certifiable gadget [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/best-rei-cyber-week-outdoor-deals-2025/",
+        "title": "The 47 Best REI Cyber Week Outdoor Deals (2025)",
+        "link": "https://www.wired.com/story/best-rei-cyber-week-outdoor-deals-2025/",
+        "published": "Mon, 08 Dec 2025 16:42:20 +0000",
+        "source": "WIRED",
+        "summary": "Today is the final day of REI's sale, and deals are disappearing fast. Grab what you need with these great deals on tents, packs, and merino wool."
+    },
+    {
+        "id": "https://arstechnica.com/cars/2025/12/f1-in-abu-dhabi-and-thats-the-championship/",
+        "title": "F1 in Abu Dhabi: And that\u2019s the championship",
+        "link": "https://arstechnica.com/cars/2025/12/f1-in-abu-dhabi-and-thats-the-championship/",
+        "published": "Mon, 08 Dec 2025 17:01:37 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "A three-way fight down to the wire as the ground effect era comes to a close."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/uber-will-start-selling-trip-and-takeout-data-to-marketers-171011769.html?src=rss",
+        "title": "Uber will start selling trip and takeout data to marketers",
+        "link": "https://www.engadget.com/big-tech/uber-will-start-selling-trip-and-takeout-data-to-marketers-171011769.html?src=rss",
+        "published": "Mon, 08 Dec 2025 17:10:11 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Uber will begin selling customer data to marketers, <a href=\"https://www.businessinsider.com/uber-ads-launches-intelligence-insights-trips-takeout-data-marketers-2025-12\"><ins>according to a report by </ins><em><ins>Business Insider</ins></em></a>. The company's ad division just launched a new insights platform called Uber Intelligence that's tasked with hoovering up and selling trip and delivery data.</p>\n<p>The data will technically be anonymous, via the use of a platform called LiveRamp. T"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/best-guess-live-is-netflixs-take-on-hq-trivia-170000030.html?src=rss",
+        "title": "Best Guess Live is Netflix's take on HQ Trivia",
+        "link": "https://www.engadget.com/entertainment/streaming/best-guess-live-is-netflixs-take-on-hq-trivia-170000030.html?src=rss",
+        "published": "Mon, 08 Dec 2025 17:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Netflix has already committed to <a class=\"link\" href=\"https://www.engadget.com/entertainment/streaming/netflix-is-bringing-back-star-search-as-it-continues-to-expand-into-live-tv-214022695.html\" target=\"_blank\">reviving <em>Star Search</em></a><em> </em>for its streaming service, and now the company is turning its attention to a different type of live show: <a class=\"link\" href=\"https://www.engadget.com/2017-10-18-creators-of-vine-trivia-show-app-hq.html\" target=\"_blank\">HQ Trivia</a>. Netfl"
+    },
+    {
+        "id": "https://www.engadget.com/general/the-developer-behind-iceblock-is-suing-the-federal-government-165111674.html?src=rss",
+        "title": "The developer behind ICEBlock is suing the federal government",
+        "link": "https://www.engadget.com/general/the-developer-behind-iceblock-is-suing-the-federal-government-165111674.html?src=rss",
+        "published": "Mon, 08 Dec 2025 16:51:12 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The makers of <a href=\"https://www.engadget.com/social-media/iceblock-climbs-to-the-top-of-the-app-store-charts-after-officials-slam-it-004319963.html\"><ins>ICEBlock</ins></a>, the community-based reporting app for ICE sightings and activity, are suing the federal government, <a href=\"https://www.documentcloud.org/documents/26360437-iceblock-complaint-as-filed/\"><ins>alleging</ins></a> &quot;unlawful threats&quot; made by Trump administration officials led to the app's removal from app stores"
+    },
+    {
+        "id": "https://gizmodo.com/meta-quest-4-release-date-not-coming-2026-2000696696",
+        "title": "A New Meta Quest Probably Won\u2019t Happen in 2026",
+        "link": "https://gizmodo.com/meta-quest-4-release-date-not-coming-2026-2000696696",
+        "published": "Mon, 08 Dec 2025 17:00:35 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Meta Quest 3s Xbox 1\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/06/Meta-Quest-3S-XBOX-1.jpg\" width=\"1920\" /><br /><br />Don't hold your breath, VR fans."
+    },
+    {
+        "id": "https://gizmodo.com/stranger-things-5-volume-2-character-posters-netflix-2000696770",
+        "title": "The Gang Is Rough Shape in First Posters for \u2018Stranger Things 5\u2019 Volume 2",
+        "link": "https://gizmodo.com/stranger-things-5-volume-2-character-posters-netflix-2000696770",
+        "published": "Mon, 08 Dec 2025 17:00:12 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Sadie Sink Stranger Things 5 Poster\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Sadie-Sink-Stranger-Things-5-poster.jpg\" width=\"1920\" /><br /><br />Will, Eleven, Mike and the rest are ready to continue the fight on December 25."
+    },
+    {
+        "id": "https://gizmodo.com/250-environmental-orgs-ask-congress-for-moratorium-on-new-data-centers-2000696685",
+        "title": "250 Environmental Orgs Ask Congress for Moratorium on New Data Centers",
+        "link": "https://gizmodo.com/250-environmental-orgs-ask-congress-for-moratorium-on-new-data-centers-2000696685",
+        "published": "Mon, 08 Dec 2025 16:50:41 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Eemshaven,data,center,cooling,systems\" class=\"attachment-full size-full wp-post-image\" height=\"1079\" src=\"https://gizmodo.com/app/uploads/2025/12/shutterstock_2704406619.jpg\" width=\"1920\" /><br /><br />The \"AI and crypto frenzy\" is threatening American lives, the organizations say."
+    },
+    {
+        "id": "https://gizmodo.com/musk-says-starlink-not-nasa-is-spacexs-cash-cow-2000696780",
+        "title": "Musk Says Starlink, Not NASA, Is SpaceX\u2019s Cash Cow",
+        "link": "https://gizmodo.com/musk-says-starlink-not-nasa-is-spacexs-cash-cow-2000696780",
+        "published": "Mon, 08 Dec 2025 16:46:59 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Falcon 9 Starlink Launch\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/06/falcon-9-starlink-launch.jpeg\" width=\"1920\" /><br /><br />Amid media reports of skyrocketing valuation and a potential IPO for SpaceX, the company could have a lot to lose next year."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-samsung-odyssey-g8-gaming-monitor-deal",
+        "title": "Upgrade to the Samsung Odyssey G8 QD-OLED gaming monitor while its at its best price ever",
+        "link": "https://mashable.com/article/dec-8-samsung-odyssey-g8-gaming-monitor-deal",
+        "published": "Mon, 08 Dec 2025 16:21:52 +0000",
+        "source": "Mashable",
+        "summary": "The Samsung 32-inch Odyssey G8 OLED gaming monitor is down to a new record-low price of $899.99. That beats its Cyber Monday price."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-lg-ultragear-monitor-deal",
+        "title": "Gift yourself the 45-inch LG Ultragear curved gaming monitor while its almost half off at Amazon",
+        "link": "https://mashable.com/article/dec-8-lg-ultragear-monitor-deal",
+        "published": "Mon, 08 Dec 2025 16:06:16 +0000",
+        "source": "Mashable",
+        "summary": "The 45-inch LG Ultragear curved gaming monitor is on sale at Amazon for $896.99, down from the list price of $1,699.99. That's a 47% discount."
+    },
+    {
+        "id": "https://mashable.com/article/starbucks-bear-cup-bearista-update",
+        "title": "Starbucks bear cup fans may have another shot at the viral Bearista Cup",
+        "link": "https://mashable.com/article/starbucks-bear-cup-bearista-update",
+        "published": "Mon, 08 Dec 2025 16:01:47 +0000",
+        "source": "Mashable",
+        "summary": "Starbucks posted a cryptic Instagram post that suggests we might have another chance to snag the Bearista Cup. Here's everything we know so far."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-apple-m4-ipad-pro-deal",
+        "title": "The 13-inch M4 iPad Pro is now cheaper than Black Friday",
+        "link": "https://mashable.com/article/dec-8-apple-m4-ipad-pro-deal",
+        "published": "Mon, 08 Dec 2025 16:00:04 +0000",
+        "source": "Mashable",
+        "summary": "The M4 iPad Pro with 1TB of storage and WiFi and cellular connectivity is down to a record low price that beats Black Friday."
+    },
+    {
+        "id": "https://readwrite.com/orange-county-shuts-down-illegal-gambling-operation-garage-door/",
+        "title": "Orange County shuts down illegal gambling operation disguised as garage door business",
+        "link": "https://readwrite.com/orange-county-shuts-down-illegal-gambling-operation-garage-door/",
+        "published": "Mon, 08 Dec 2025 16:15:53 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Orange County shuts down illegal gambling operation disguised as garage door business. A row of brightly lit slot-style gaming machines with colorful digital screens sits inside a dark room, each machine glowing with neon outlines and displaying various game graphics. Empty chairs and drink bottles are positioned in front of the machines.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Orange-County-shuts-down"
+    },
+    {
+        "id": "https://www.zdnet.com/article/gemini-vs-copilot/",
+        "title": "Gemini vs. Copilot: I tested the AI tools on 7 everyday tasks, and it wasn't even close",
+        "link": "https://www.zdnet.com/article/gemini-vs-copilot/",
+        "published": "Mon, 08 Dec 2025 16:36:58 GMT",
+        "source": "Latest news",
+        "summary": "Microsoft is building Copilot into every product it owns, while Google is integrating its Gemini LLM tool into all of its properties. To determine which tool is better, I came up with seven challenges."
+    },
+    {
+        "id": "https://thegeeko.me/blog/amd-gpu-debugging/",
+        "title": "AMD GPU Debugger",
+        "link": "https://thegeeko.me/blog/amd-gpu-debugging/",
+        "published": "Mon, 08 Dec 2025 16:06:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46193931\">Comments</a>"
+    },
+    {
+        "id": "https://www3.nhk.or.jp/nhkworld/en/news/20251209_02/",
+        "title": "Strong earthquake hits northern Japan, tsunami warning issued",
+        "link": "https://www3.nhk.or.jp/nhkworld/en/news/20251209_02/",
+        "published": "Mon, 08 Dec 2025 14:50:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46192846\">Comments</a>"
+    },
+    {
+        "id": "https://nkinternet.com/2025/12/08/hunting-for-north-korean-fiber-optic-cables/",
+        "title": "Hunting for North Korean Fiber Optic Cables",
+        "link": "https://nkinternet.com/2025/12/08/hunting-for-north-korean-fiber-optic-cables/",
+        "published": "Mon, 08 Dec 2025 16:38:08 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46194384\">Comments</a>"
+    },
+    {
+        "id": "https://tailscale.com/blog/tailscale-jailbroken-kindle",
+        "title": "Let's put Tailscale on a jailbroken Kindle",
+        "link": "https://tailscale.com/blog/tailscale-jailbroken-kindle",
+        "published": "Mon, 08 Dec 2025 16:34:08 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46194337\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/08/1128922/the-state-of-ai-a-vision-of-the-world-in-2030/",
+        "title": "The State of AI: A vision of the world in 2030",
+        "link": "https://www.technologyreview.com/2025/12/08/1128922/the-state-of-ai-a-vision-of-the-world-in-2030/",
+        "published": "Mon, 08 Dec 2025 16:30:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Welcome back to The State of AI, a new collaboration between the Financial Times and MIT Technology Review. Every Monday, writers from both publications debate one aspect of the generative AI revolution reshaping global power.&#160;You can read the rest of the series here. In this final edition, MIT Technology Review\u2019s senior AI editor Will Douglas&#8230;"
     }
 ]
