📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2062,5 +2062,173 @@
         "published": "Mon, 08 Dec 2025 16:30:00 +0000",
         "source": "MIT Technology Review",
         "summary": "Welcome back to The State of AI, a new collaboration between the Financial Times and MIT Technology Review. Every Monday, writers from both publications debate one aspect of the generative AI revolution reshaping global power.&#160;You can read the rest of the series here. In this final edition, MIT Technology Review\u2019s senior AI editor Will Douglas&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/google-details-security-measures-for-chromes-agentic-features/",
+        "title": "Google details security measures for Chrome\u2019s agentic features",
+        "link": "https://techcrunch.com/2025/12/08/google-details-security-measures-for-chromes-agentic-features/",
+        "published": "Mon, 08 Dec 2025 18:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Google details how it is enacting security guardrails before rolling out agentic capabilities on Chrome."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/you-can-buy-your-instacart-groceries-without-leaving-chatgpt/",
+        "title": "You can buy your Instacart groceries without leaving ChatGPT",
+        "link": "https://techcrunch.com/2025/12/08/you-can-buy-your-instacart-groceries-without-leaving-chatgpt/",
+        "published": "Mon, 08 Dec 2025 17:59:53 +0000",
+        "source": "TechCrunch",
+        "summary": "Shoppers will be able to go from recipe planning to checkout within the ChatGPT window."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/tiktok-adds-a-space-for-organizing-content-with-others-teases-shared-feeds/",
+        "title": "TikTok adds a space for organizing content with others, teases \u2018Shared Feeds\u2019",
+        "link": "https://techcrunch.com/2025/12/08/tiktok-adds-a-space-for-organizing-content-with-others-teases-shared-feeds/",
+        "published": "Mon, 08 Dec 2025 17:18:36 +0000",
+        "source": "TechCrunch",
+        "summary": "Shared Feeds will surface new content tailored to both users' tastes, such as sports, winter activities, and their favorite creators."
+    },
+    {
+        "id": "https://www.theverge.com/tech/839392/project-aura-android-xr-software-headsets-ai-glasses",
+        "title": "A first look at Google\u2019s Project Aura glasses built with Xreal",
+        "link": "https://www.theverge.com/tech/839392/project-aura-android-xr-software-headsets-ai-glasses",
+        "published": "2025-12-08T13:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Teased at Google I/O, Project Aura is a collaboration between Xreal and Google. It's the second Android XR device (the first being Samsung's Galaxy XR headset) and is expected to launch in 2026. Putting it on, I get why the term \"smart glasses\" doesn't exactly fit. Is it a headset? Smart glasses? Both? Those were [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/839858/hp-omnibook-5-14-snapdragon-arm-oled-laptop-review",
+        "title": "HP OmniBook 5 14 review: an OLED is almost enough",
+        "link": "https://www.theverge.com/tech/839858/hp-omnibook-5-14-snapdragon-arm-oled-laptop-review",
+        "published": "2025-12-08T12:30:00-05:00",
+        "source": "The Verge",
+        "summary": "You know what I love more than OLEDs? Cheap OLEDs. And that's exactly what drew me to the 14-inch HP OmniBook 5. It's a $700 Windows laptop with a Snapdragon X Plus processor and an OLED screen. That means it should have great battery life and a beautiful screen. I consider these important in any [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/840068/analogue-3d-transparent-funtastic-limited-edition",
+        "title": "Analogue is restocking its 4K N64 and making it more colorful",
+        "link": "https://www.theverge.com/news/840068/analogue-3d-transparent-funtastic-limited-edition",
+        "published": "2025-12-08T12:18:28-05:00",
+        "source": "The Verge",
+        "summary": "As if the Analogue 3D wasn't nostalgic enough, the 4K N64 emulator will soon be available in a handful of transparent \"Funtastic\" limited editions going on sale on December 10th at 8AM Pacific/11AM Eastern. The vibrant transparent models will be available \"in highly limited quantities,\" and they'll cost more than the standard model at $299. [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/analogue-is-weaponizing-your-nostalgia-with-these-translucent-versions-of-its-3d-console-181105740.html?src=rss",
+        "title": "Analogue is weaponizing your nostalgia with these translucent versions of its 3D console",
+        "link": "https://www.engadget.com/gaming/analogue-is-weaponizing-your-nostalgia-with-these-translucent-versions-of-its-3d-console-181105740.html?src=rss",
+        "published": "Mon, 08 Dec 2025 18:11:05 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Analogue just announced <a href=\"https://www.analogue.co/editions/3d-funtastic\"><ins>new colorways</ins></a> for its recently-launched Analogue 3D console. The appropriately-named Funtastic limited-edition consoles are heavily inspired by Nintendo's translucent N64 models from the late 1990s. Analogue even <a href=\"https://consolevariations.com/blog/every-nintendo-64-console-variation-ever-complete-color-list\"><ins>borrowed the Funtastic branding</ins></a>.</p>\n<p>In other words, these are go"
+    },
+    {
+        "id": "https://www.engadget.com/techs-biggest-winners-of-2025-180000177.html?src=rss",
+        "title": "Tech's biggest winners of 2025",
+        "link": "https://www.engadget.com/techs-biggest-winners-of-2025-180000177.html?src=rss",
+        "published": "Mon, 08 Dec 2025 18:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Every December, the Engadget staff compiles a list of <a class=\"link\" href=\"https://www.engadget.com/techs-biggest-winners-in-2024-180015837.html\" target=\"_blank\">the year\u2019s biggest winners</a>. We scour over articles from the previous 12 months to determine the people, companies, products and trends that made the most impact over the course of the year. Not all of that influence is positive, however, and some selections may also appear on our list of biggest losers. Still, sit back and enjoy"
+    },
+    {
+        "id": "https://www.engadget.com/wearables/heres-how-google-is-laying-the-foundation-for-our-mixed-reality-future-180000716.html?src=rss",
+        "title": "Here's how Google is laying the foundation for our mixed reality future",
+        "link": "https://www.engadget.com/wearables/heres-how-google-is-laying-the-foundation-for-our-mixed-reality-future-180000716.html?src=rss",
+        "published": "Mon, 08 Dec 2025 18:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p></p><p>Today, during the <a class=\"link\" href=\"https://www.youtube.com/live/a3-OJxxW810?si=2ioiKicMKmFFb-d7\" target=\"_blank\">XR edition of The Android Show</a>, Google showed off a bunch of updates and new features headed to its mixed reality OS. And while most of the news was aimed at developers, I got a chance to demo some of the platform's expanded capabilities on a range of hardware including <a class=\"link\" href=\"https://www.engadget.com/ar-vr/samsung-galaxy-xr-hands-on-a-smarter-more-op"
+    },
+    {
+        "id": "https://gizmodo.com/analogue-3d-nintendo-64-limited-edition-translucent-colors-release-date-2000696835",
+        "title": "The Best Way to Play Your N64 Games Now Looks Even Better",
+        "link": "https://gizmodo.com/analogue-3d-nintendo-64-limited-edition-translucent-colors-release-date-2000696835",
+        "published": "Mon, 08 Dec 2025 18:03:47 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Analogue 3d Le Funtastic Img03\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Analogue-3D-LE_funtastic_img03-1.jpg\" width=\"1920\" /><br /><br />The Analogue 3D now comes in all the transparent colorways you never got as a kid."
+    },
+    {
+        "id": "https://gizmodo.com/the-fictional-characters-and-shows-we-lost-in-2025-2000691833",
+        "title": "The Fictional Characters and Shows We Lost in 2025",
+        "link": "https://gizmodo.com/the-fictional-characters-and-shows-we-lost-in-2025-2000691833",
+        "published": "Mon, 08 Dec 2025 18:00:56 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Year In Review 2025 Fictional Rip Wheel Of Time Solar Opposites Jinu Kpop Demon Hunters\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/year-in-review-2025-fictional-RIP-wheel-of-time-solar-opposites-jinu-kpop-demon-hunters.jpg\" width=\"1920\" /><br /><br />To all the sci-fi, fantasy, and horror characters, TV series, and other creations that took their final bows this year: we'll miss (most of) you!"
+    },
+    {
+        "id": "https://gizmodo.com/company-discovers-hundreds-of-new-deep-sea-creatures-while-figuring-out-how-to-mine-their-home-2000696746",
+        "title": "Company Discovers Hundreds of New Deep Sea Creatures While Figuring Out How to Mine Their Home",
+        "link": "https://gizmodo.com/company-discovers-hundreds-of-new-deep-sea-creatures-while-figuring-out-how-to-mine-their-home-2000696746",
+        "published": "Mon, 08 Dec 2025 17:45:02 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Deep Sea Catalogue Ccz\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/deep-sea-catalogue-ccz.jpg\" width=\"1920\" /><br /><br />The discovery could hold serious implications for the mining industry."
+    },
+    {
+        "id": "https://gizmodo.com/trumps-epa-plans-to-raise-threshold-for-safe-formaldehyde-exposure-2000696735",
+        "title": "Trump\u2019s EPA Plans to Raise Threshold for \u2018Safe\u2019 Formaldehyde Exposure",
+        "link": "https://gizmodo.com/trumps-epa-plans-to-raise-threshold-for-safe-formaldehyde-exposure-2000696735",
+        "published": "Mon, 08 Dec 2025 17:15:58 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Formaldehyde\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/formaldehyde.jpg\" width=\"1920\" /><br /><br />The EPA has revised its assessment of the health risks posed by the carcinogen, less than a year after the Biden administration issued its own verdict."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-asus-rog-ally-deal",
+        "title": "The ASUS ROG Xbox Ally just hit a new record-low price",
+        "link": "https://mashable.com/article/dec-8-asus-rog-ally-deal",
+        "published": "Mon, 08 Dec 2025 17:18:40 +0000",
+        "source": "Mashable",
+        "summary": "Right now, you can score the ASUS ROG Xbox Ally (72 A, 168GB RAM, 512GB SSD) for just $489.99, down from $599.99."
+    },
+    {
+        "id": "https://mashable.com/article/samsung-launches-one-ui-public-beta-how-to-download",
+        "title": "Samsung launches One UI 8.5 public beta. How to download it.",
+        "link": "https://mashable.com/article/samsung-launches-one-ui-public-beta-how-to-download",
+        "published": "Mon, 08 Dec 2025 17:18:01 +0000",
+        "source": "Mashable",
+        "summary": "Samsung launches One UI 8.5 public beta. How to download it."
+    },
+    {
+        "id": "https://mashable.com/roundup/best-free-dating-sites-apps",
+        "title": "10 free dating apps to try for winter 2025",
+        "link": "https://mashable.com/roundup/best-free-dating-sites-apps",
+        "published": "Mon, 08 Dec 2025 17:00:00 +0000",
+        "source": "Mashable",
+        "summary": "We've rounded up the best free dating apps to try this year. Find love, a fling, or anything in between \u2014 no credit card required."
+    },
+    {
+        "id": "https://mashable.com/article/ariana-grande-67-adam-sandler-interview",
+        "title": "Ariana Grandes viral 6-7 moment in her Adam Sandler conversation shows, yes, shes online",
+        "link": "https://mashable.com/article/ariana-grande-67-adam-sandler-interview",
+        "published": "Mon, 08 Dec 2025 16:55:05 +0000",
+        "source": "Mashable",
+        "summary": "Ariana Grande heard Adam Sandler say \"6-7\" and reacted like a parent wincing, awaiting their kid's response."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-magic-the-gathering-avatar-the-last-airbender-jumpstart-booster-box",
+        "title": "The Magic: The Gathering Avatar The Last Airbender Jumpstart Booster Box is under $100 at Amazon \u2014 save over $50",
+        "link": "https://mashable.com/article/dec-8-magic-the-gathering-avatar-the-last-airbender-jumpstart-booster-box",
+        "published": "Mon, 08 Dec 2025 16:29:24 +0000",
+        "source": "Mashable",
+        "summary": "The Magic: The Gathering Avatar The Last Airbender Jumpstart Booster Box is on sale for $97.95 on Amazon."
+    },
+    {
+        "id": "https://www.zdnet.com/article/chatgpt-saving-time-work/",
+        "title": "OpenAI says ChatGPT saves the average worker up to an hour each day - here's how",
+        "link": "https://www.zdnet.com/article/chatgpt-saving-time-work/",
+        "published": "Mon, 08 Dec 2025 18:10:43 GMT",
+        "source": "Latest news",
+        "summary": "The company is stepping up its efforts to attract enterprise customers amid growing competition from Google and Anthropic."
+    },
+    {
+        "id": "https://www.zdnet.com/article/android-xr-smart-glasses-hands-on/",
+        "title": "I saw the future of Android XR smart glasses, and Google left me stunned at the progress",
+        "link": "https://www.zdnet.com/article/android-xr-smart-glasses-hands-on/",
+        "published": "Mon, 08 Dec 2025 18:00:00 GMT",
+        "source": "Latest news",
+        "summary": "From multimodal AI glasses to immersive headsets, Google's plan for its Android XR platform feels more ambitious than ever."
+    },
+    {
+        "id": "https://higashi.blog/2025/12/07/ai-verification/",
+        "title": "AI should only run as fast as we can catch up",
+        "link": "https://higashi.blog/2025/12/07/ai-verification/",
+        "published": "Mon, 08 Dec 2025 17:38:34 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46195198\">Comments</a>"
     }
 ]
